k8s_pg_spring_vault_demo/deployment.postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datasource-deployment
  labels:
    app: datasource
spec:
  replicas: 1
  selector:
    matchLabels:
        app: datasource-postgres
  template:
    metadata:
      labels:
        app: datasource-postgres
    spec:
      containers:
      - name: datasource-postgres
        image: postgres:15.4-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: datasource-postgres-service
spec:
  selector:
    app: datasource-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
